--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -1,5 +1,5 @@
 name: bobrossquotes # check to see if it's available
-version: '1.4+git' # this is freakin' awesome
+version: git
 summary: A collection of Bob Ross quotes # 79 char long summary
 description: |
   Get inspiration and a happier view on life from Bob Ross...in your terminal.
