--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -9,6 +9,8 @@ confinement: strict # use 'strict' once you have the right plugs
 apps:
   bobrossquotes:
     command: bobross
+    environment:
+      LC_ALL: C.UTF-8
     plugs:
       - home
      
