--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -1,8 +1,12 @@
 name: bobrossquotes # check to see if it's available
-version: git
+adopt-info: bobrossquotes
 summary: A collection of Bob Ross quotes # 79 char long summary
 description: |
   Get inspiration and a happier view on life from Bob Ross...in your terminal.
+
+license: MIT
+
+base: core18
 grade: stable # must be 'stable' to release into candidate/stable channels
 confinement: strict # use 'strict' once you have the right plugs
 
@@ -11,15 +15,17 @@ apps:
     command: bobross
     environment:
       LC_ALL: C.UTF-8
-    plugs:
-      - home
      
 parts: 
-  my-part:
+  bobrossquotes:
     source: https://github.com/kz6fittycent/BobRossQuotes
     source-type: git
     plugin: python
     python-version: python3
+    
+    override-pull: |
+      snapcraftctl pull
+      snapcraftctl set-version "$(git describe --tags | sed 's/^v//' | cut -d "-" -f1)"    
     
     build-packages:
       - python3
