--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -8,6 +8,25 @@ license: MIT
 base: core24
 grade: stable 
 confinement: strict
+source-code: https://github.com/kz6fittycent/BobRossQuotes
+issues: https://github.com/kz6fittycent/BobRossQuotes/issues
+
+platforms:
+  amd64:
+    build-on: [amd64]
+    build-for: [amd64]
+  arm64:
+    build-on: [arm64]
+    build-for: [arm64]
+  armhf:
+    build-on: [armhf]
+    build-for: [armhf]
+  ppc64el:
+    build-on: [ppc64el]
+    build-for: [ppc64el]
+  s390x:
+    build-on: [s390x]
+    build-for: [s390x]
 
 apps:
   bobrossquotes:
